<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context="ru.bstu.it41.service.profile.settings.SettingsFragment">

        <Switch
            android:id="@+id/switch_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_email"/>

    <Switch
        android:id="@+id/switch_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_sms"
        android:visibility="gone"/>

    <Switch
        android:id="@+id/switch_push"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_push"/>

    <Button
        android:id="@+id/buttonChangeSettings"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:paddingStart="64dp"
        android:paddingEnd="64dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:text="@string/button_change_settings"
        android:textAllCaps="false" />

    <LinearLayout
        style="@style/layout_list_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/text_list_style"
            android:layout_width="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="2"
            android:text="@string/text_profile_email" />

        <TextView
            android:id="@+id/text_email"
            style="@style/text_list_style"
            android:layout_width="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonChangeEmail"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:paddingStart="64dp"
        android:paddingEnd="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center"

        android:text="@string/button_change_email"
        android:textAllCaps="false" />

    <LinearLayout
        style="@style/layout_list_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/text_list_style"
            android:layout_width="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="2"
            android:text="@string/text_profile_phone" />

        <TextView
            android:id="@+id/text_phone"
            style="@style/text_list_style"
            android:layout_width="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonChangePhone"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="64dp"
        android:paddingEnd="64dp"
        android:layout_gravity="center"
        android:text="@string/button_change_phone"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/buttonChangePassword"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="64dp"
        android:paddingEnd="64dp"
        android:layout_gravity="center"
        android:text="@string/button_change_password"
        android:textAllCaps="false" />
</LinearLayout>
</ScrollView>