<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/text_list_style"
            android:layout_width="match_parent"
            android:layout_gravity="end"
            android:gravity="start"
            android:labelFor="@id/edit_name"
            android:text="@string/task_name_title" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            style="@style/text_list_style"
            android:layout_width="match_parent"
            android:layout_gravity="end"
            android:gravity="start"
            android:labelFor="@id/edit_description"
            android:text="@string/task_description_title" />

        <EditText
            android:id="@+id/edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLength="1000"/>

        <TextView
            style="@style/text_list_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/edit_deadline"
            android:text="@string/task_deadline_title" />

        <Button
            style="@android:style/Widget.EditText"
            android:id="@+id/edit_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:inputType="none" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp">

            <TextView
                style="@style/text_list_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_category_title" />

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <TextView
            style="@style/text_list_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/edit_price"
            android:text="@string/task_price_title" />

        <EditText
            android:id="@+id/edit_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

        <TextView
            style="@style/text_list_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/edit_address"
            android:text="@string/task_address_title" />

        <EditText
            android:id="@+id/edit_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLines="5"/>

        <Button
            android:id="@+id/button_place"
            style="@style/button_style"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/task_choose_on_map" />

        <Button
            android:id="@+id/button_further"
            style="@style/button_style"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"
            android:text="@string/button_save_changes" />
    </LinearLayout>
</ScrollView>
